<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.nashvilleeventcalendar.EventDetailActivity" >

	<LinearLayout
	    android:id="@+id/event_detail_layout"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical" >
	    
	    <TextView 
		    android:id="@+id/event_detail_title"
		    android:textAppearance="@android:style/TextAppearance.Large"
		    android:textStyle="bold"
		    android:gravity="center_horizontal"
		    android:layout_width="match_parent"
		    android:layout_height="0dp"
	        android:layout_weight="1"
		    android:padding="10dp" />
	    
	    <TextView 
	        android:textAppearance="@android:style/TextAppearance.Medium"
	        android:gravity="center_horizontal"
	        android:layout_width="match_parent"
	        android:layout_height="0dp"
	        android:layout_weight="1"
	        android:text="@string/category" />
	    
	    <TextView
	        android:id="@+id/event_detail_category"
	        android:textAppearance="@android:style/TextAppearance.Medium"
	        android:textStyle="italic"
	        android:gravity="center_horizontal"
	        android:layout_width="match_parent"
	        android:layout_height="0dp"
	        android:layout_weight="1"
	        android:paddingBottom="10dp" />
	    
		<TextView 
	        android:textAppearance="@android:style/TextAppearance.Medium"
	        android:gravity="center_horizontal"
	        android:layout_width="match_parent"
	        android:layout_height="0dp"
	        android:layout_weight="1"
	        android:text="@string/where" />
	    
	    <TextView 
	        android:id="@+id/event_detail_location"
	        android:textAppearance="@android:style/TextAppearance.Medium"
	        android:textStyle="italic"
	        android:gravity="center_horizontal"
	        android:layout_width="match_parent"
	        android:layout_height="0dp"
	        android:layout_weight="1"
	        android:paddingBottom="10dp" />
	    
	    <TextView 
	        android:textAppearance="@android:style/TextAppearance.Medium"
	        android:gravity="center_horizontal"
	        android:layout_width="match_parent"
	        android:layout_height="0dp"
	        android:layout_weight="1"
	        android:text="@string/when" />
	    
	    <TextView 
	        android:id="@+id/event_detail_date_time"
	        android:textAppearance="@android:style/TextAppearance.Medium"
	        android:textStyle="italic"
	        android:gravity="center_horizontal"
	        android:layout_width="match_parent"
			android:layout_height="0dp"
	        android:layout_weight="1"
	        android:paddingBottom="10dp" />
	    
	    <TextView 
	        android:textAppearance="@android:style/TextAppearance.Medium"
	        android:gravity="center_horizontal"
	        android:layout_width="match_parent"
	        android:layout_height="0dp"
	        android:layout_weight="1"
	        android:text="@string/people_going" />
	    
		<TextView
	        android:id="@+id/event_detail_num_people"
	        android:layout_width="fill_parent"
	      	android:layout_height="0dp"
	        android:layout_weight="1"
	        android:gravity="center_horizontal"
	        android:textAppearance="@android:style/TextAppearance.Medium"
	        android:textStyle="italic"
	        android:paddingBottom="10dp" />
	    
		<TextView 
	        android:textAppearance="@android:style/TextAppearance.Medium"
	        android:gravity="center_horizontal"
	        android:layout_width="match_parent"
	        android:layout_height="0dp"
	        android:layout_weight="1"
	        android:text="@string/description" />
		
	    <TextView 
	        android:id="@+id/event_detail_description"
	        android:textAppearance="@android:style/TextAppearance.Medium"
	        android:textStyle="italic"
	        android:gravity="center_horizontal"
	        android:layout_width="match_parent"
	        android:layout_height="0dp"
	        android:layout_weight="1"
	        android:paddingBottom="10dp" />
	    
		<Button 
		    android:id="@+id/going_to_event_button"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:gravity="center"
		    android:text="@string/going_to_event_string"
		    android:onClick="goingToEventButtonClick" />
	    
	</LinearLayout>

</ScrollView>
